# cpiler

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: assemblers.rs  backends.rs  isas.rs  lib.rs  util.rs
backend/src/assemblers/: sh4a.rs
backend/src/assemblers/sh4a/: asm.rs
backend/src/backends/: aarch64_mac.rs  sh4a_fxcg50.rs  x86_64_linux.rs
backend/src/backends/aarch64_mac/: asm.rs  codegen.rs
backend/src/backends/aarch64_mac/asm/: immediate.rs  instruction.rs
backend/src/backends/aarch64_mac/codegen/: arguments.rs  expression.rs  stack.rs  statement.rs  to_asm.rs  util.rs
backend/src/backends/aarch64_mac/codegen/to_asm/: binaryop.rs  function_call.rs  load.rs  (+2 more)
backend/src/backends/sh4a_fxcg50/: codegen.rs  stack.rs
backend/src/backends/sh4a_fxcg50/codegen/: constants.rs  expression.rs  inline_asm.rs
backend/src/isas/: sh4a.rs  x86.rs
backend/src/isas/sh4a/: assembler.rs
backend/src/isas/sh4a/assembler/: asm.rs
backend/src/util/: destructure.rs  registers.rs  stack.rs
backend/src/util/registers/: context.rs  determine_spill.rs  spill.rs
backend/src/util/registers/context/: conditional_spill.rs  linear_spill.rs
backend/src/util/registers/spill/: conditional.rs  linear.rs  replace.rs  replacement.rs
backend/tests/: registers.rs
compiler/: .gitignore  Cargo.toml  basic  code  code.s  floats  function_call  globals  ir.txt  loops  nested_loops  opt-_start-ir.ir  opt-g_init-ir.ir  opt-main-ir.ir  ptr_deref  reg-main-ir.s  simple  spill_var  spill_vars  test  testing.g3a
compiler/src/: cli.rs  error.rs  lib.rs  main.rs
compiler/src/error/: cache.rs
compiler/tests/: basics.rs
compiler/tests/files/: final.c  floats.c  function_call.c  loops.c  ptr_deref.c  semantic_error_1.c  simple.c  spill_vars.c  syntax_error_3.c
compiler/tests/files/basics/: address_of_array.c  array.c  array_and_loop.c  branching.c  factorial.c  final.c  for_loop.c  globals.c  missing_include.c  nested_loops.c  pointer.c  spilling.c  while_loop.c
compiler/tests/files/semantics/: struct_access_on_non_struct.c  unknown_struct_field.c
compiler/tests/files/sh4a_fxcg50/: basic.c
compiler/tests/files/syntax/: syntax_error_1.c  syntax_error_2.c
general/: Cargo.toml
general/src/: arch.rs  dot.rs  lib.rs  shunting_yard.rs  source.rs  span.rs  spandata.rs
general/src/dot/: edge.rs  graph.rs  node.rs  subgraph.rs
general/src/span/: char_iter.rs
graphs/: Cargo.toml
graphs/benches/: benchmark.rs
graphs/src/: directed.rs  lib.rs  undirected.rs
graphs/src/directed/: chain.rs  flatchain.rs  mocks.rs  successor.rs
graphs/tests/: directed.rs
ir/: Cargo.toml  README.md
ir/src/: block.rs  comp.rs  dominance.rs  dot.rs  expression.rs  function.rs  general.rs  interference.rs  lib.rs  simpler.rs  statement.rs  text_rep.rs  ty.rs  value.rs  variable.rs
ir/src/block/: builder.rs  inner.rs  iter.rs  linear.rs  pred_iter.rs  weak.rs
ir/src/dominance/: postorder.rs
ir/src/dot/: blocks.rs  context.rs  lines.rs
ir/src/expression/: binary.rs  unary.rs
ir/src/function/: debug.rs  dominance.rs  interference.rs  verify.rs
ir/src/general/: statement.rs
ir/src/simpler/: block.rs  statement.rs  value.rs
ir/tests/: dominance.rs  interference.rs  partial_eq.rs
register_allocation/: Cargo.toml  README.md
register_allocation/src/: context.rs  debug_ctx.rs  lib.rs  phi_classes.rs  reconstruct.rs  spill.rs  spilling.rs
register_allocation/src/context/: conditional_spill.rs  linear_spill.rs  loop_spill.rs
register_allocation/src/reconstruct/: lastdef.rs
register_allocation/src/spill/: conditional.rs  linear.rs  replace.rs  replacement.rs
register_allocation/src/spilling/: limit.rs  loop_max_pressure.rs  min.rs  reload_list.rs  replace.rs
register_allocation/tests/: addremove.c  spill_addremove.rs  spill_linear.rs  spilling.rs
syntax/: Cargo.toml
syntax/fuzz/: Cargo.toml
syntax/fuzz/fuzz_targets/: fuzz_target_1.rs
syntax/src/: error.rs  expression.rs  identifier.rs  lib.rs  scope.rs  statement.rs  ty.rs
syntax/src/expression/: parse_state.rs
syntax/src/statement/: assign_target.rs  assign_type.rs  else_block.rs  enums.rs  starting_literal.rs  starting_type.rs  structs.rs
syntax/tests/: enums.rs  expressions.rs  functions.rs  ifs.rs  increments.rs  pointers.rs  simple.rs  structs.rs  type_casts.rs  types.rs
tokenizer/: Cargo.toml
tokenizer/benches/: benchmark.rs
tokenizer/src/: iter.rs  lib.rs  state.rs  tokendata.rs
tokenizer/tests/: assignments.rs  comments.rs  functions.rs  operators.rs  simple.rs  with_char.rs  with_string.rs
tokenizer/tests/files/: comments.c  with_string.c
(+128 files in other folders)
