[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir = { path = "../ir" }
general = { path = "../general" }
g3a = { path = "../g3a" }
register_allocation = { path = "../register_allocation" }

[dev-dependencies]
tokenizer = { path = "../tokenizer" }
syntax = { path = "../syntax" }
semantic = { path = "../semantic" }
