[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../general" }
preprocessor = { path = "../preprocessor" }
syntax = { path = "../syntax" }
semantic = { path = "../semantic" }

# For Fancy error messages
ariadne = "0.1.3"
