[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../general" }
preprocessor = { path = "../preprocessor" }
syntax = { path = "../syntax" }
semantic = { path = "../semantic" }
optimizer = { path = "../optimizer" }
backend = { path = "../backend" }
ir = { path = "../ir" }

# For Fancy error messages
ariadne = "0.1.3"

# For CLI stuff
clap = { version = "3.0.7", features = ["derive"] }

#[dev-dependencies]
lazy_static = "1.4"
parking_lot = "0.12"