[package]
name = "general"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fuzzing = ["arbitrary"]

[dependencies]
ir = { path = "../ir" }

arbitrary = { version = "1.1", features = ["derive"], optional = true }
