[package]
name = "graphs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
general = { path = "../general" }
tokenizer = { path = "../tokenizer" }
syntax = { path = "../syntax" }
semantic = { path = "../semantic" }
ir = { path = "../ir" }

[[bench]]
name = "benchmark"
harness = false
