[package]
name = "ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz = { path = "../graphviz" }

[dev-dependencies]
general = { path = "../general" }
tokenizer = { path = "../tokenizer" }
syntax = { path = "../syntax" }
semantic = { path = "../semantic" }
optimizer = { path = "../optimizer" }
