[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fuzzing = ["arbitrary", "general/fuzzing", "tokenizer/fuzzing"]

[dependencies]
general = { path = "../general" }
tokenizer = { path = "../tokenizer" }

itertools = { version = "0.10" }

arbitrary = { version = "1.1", features = ["derive"], optional = true }
